Fix bugs and card is now readable

--- a/index.css
+++ b/index.css
@@ -1,17 +1,11 @@
+/***** GLOBAL ******/
+
 html, body {
-    height: 100%;
-    margin: 0;
+    background-color: #2c3e50 !important;
+    min-height: inherit !important;
 }
 
-#app {
-    height: 100%;
-}
-
-.app {
-    background-color: #2c3e50;
-    min-height: 100%;
-    margin: 0;
-}
+/***** HOME ******/
 
 .title {
     font-family: 'Roboto Slab', sans-serif;
@@ -29,10 +23,19 @@ html, body {
     font-size: 2.92rem;
 }
 
+.bottom-bar {
+    margin-top: 16px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+}
+
+/***** DECKS ******/
+
 .card {
     width: 525px;
     height: 260px;
-    margin: 12px;
+    margin: 40px 12px 12px;
     overflow-y: hidden;
 }
 
@@ -40,14 +43,43 @@ html, body {
     height: 100%;
 }
 
-.bottom-bar {
-    margin-top: 16px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
+/***** GAME ******/
 
 .players {
-    max-width: 700px;
+    margin-top: 40px;
+    max-width: 400px;
     margin-left: auto;
     margin-right: auto;
 }
+
+.rules {
+    margin-top: 40px;
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.question {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+    max-width: 250px;
+    height: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #fff;
+}
+
+.player-name {
+    color: #FFFFFF;
+}
+
+.go-back {
+    margin-top: 20px;
+}
+
+.deck {
+    text-align: center;
+}
+
